Alterando path documentacao

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
 
   <div id="doc">
-    <a href="https://google.com" target="_blank" rel="noopener noreferrer">Acessar Documentação</a>
+    <a href="./documentation" target="_blank" rel="noopener noreferrer">Acessar Documentação</a>
   </div>
 </body>
 
